Dodano 3 podstrony: list, pordrecznik i formularz. Dostosowano arkusz styli do nowych podstron.

--- a/Lab_1/formularz.html
+++ b/Lab_1/formularz.html
@@ -18,15 +18,19 @@
                 <a href="formularz.html" class="option_link"><div class="sidebar_option">Formularz</div></a>
             </div>
             <div id="content">
-                <h2>O mnie</h2>
-                <p>
-                    Cześć!<br>
-                    Nazywam się Maksymilian Łapiński i jestem studnentem III roku na kierunku Informatyka.
-                    Witaj na mojej stronie stworzonej na potrzeby Laboratorium z przedmiotu Projektowanie serwisów WWW.
-                    Aktualnie wykorzystywane przeze mnie technologie to HTML, CSS i JavaScript.
-                    Jak już pewnie zauważyłeś po lewej stronie znajduje się menu nawigacyjne które pomoże Ci poruszać się po mojej stronie internetowej.
-                    <br>Powodzenia!
-                </p>
+                <h2>Fomularz zgłoszeniowy</h2>
+                Jeżeli chcesz wziąć udział w beta testach mojej nowej strony, wypełnij poniższy formularz:<br><br>
+                Imię<br>
+                <textarea></textarea><br>
+                Nazwisko<br>
+                <textarea></textarea><br>
+                Płeć<br>
+                <input type="radio"> <label for="kobieta">Kobieta</label>
+                <input type="radio"> <label for="mezczyza"></label>Mężczyzna<br></label>
+                E-mail<br>
+                <textarea></textarea><br><br>
+                <button>Wyślij</button>
+
             </div>
             
             <div id="footer">Maksymilian Łapiński 185IC_B2 21698 Wszelkie prawa zastrzeżone &copy</div>
