--- a/Lab_2/index.html
+++ b/Lab_2/index.html
@@ -5,13 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" src="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+
+    <script src="scripts/main.js" defer></script>
 
     <title>Łapiński PSW Lab 2</title>
   </head>
-  <body>
-    <h1>Łapiński PSW Lab 2</h1>
 
+  <body>
+    
+    <div class="container">
+      <header class="bg-secondary text-dark mb-3 ">
+        <div class="row text-center">
+          <div class="col ">
+            <h1>Łapiński PSW Lab 2</h1>
+          </div>
+        </div>
+      </header>
+
+      <article>
+        <span id="toRemove">Do usunięcia</span>
+        <div class="row">
+          <div class="col">
+            <h2>Lorem ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+              Aenean et vestibulum diam. Ut feugiat mi turpis, vitae condimentum leo egestas eu. 
+              Donec sollicitudin lectus et quam lobortis auctor. Vivamus varius urna ut leo semper tempor. 
+              Vestibulum ac lectus tortor. In hac habitasse platea dictumst. Vivamus vitae dictum ante. 
+              Morbi laoreet id dui eu hendrerit. Sed dolor metus, egestas a lobortis sit amet, dictum eget leo. 
+              Nullam ullamcorper blandit convallis. Curabitur in aliquam lectus. 
+              Nullam efficitur quam ac venenatis egestas.
+            </p>
+            <p>
+              Aenean iaculis tincidunt porttitor. Vivamus pretium lacus blandit, aliquet massa ac, imperdiet dui. 
+              Nunc sit amet justo ut nisi ultrices mattis eu quis magna. Ut sed dapibus mi, at pretium ante. 
+              Curabitur suscipit ac turpis ac imperdiet. Phasellus at metus sed velit congue imperdiet. 
+              Curabitur finibus orci vitae laoreet tempus. Ut sit amet gravida lacus. 
+              Aliquam sed nisl efficitur, placerat tortor at, consectetur sapien. Integer vitae quam diam. 
+              Duis imperdiet nisi tempor eros scelerisque, sed varius leo rutrum.
+            </p>
+            <p>
+              Ut ex felis, laoreet tincidunt porttitor ut, luctus vel nulla. 
+              Nunc purus tortor, vulputate ac risus eu, sodales faucibus orci. 
+              Phasellus fermentum pulvinar leo, nec interdum diam viverra vitae. 
+              Phasellus nec mauris vulputate nunc fermentum hendrerit. Etiam eleifend lacinia pulvinar. 
+              Suspendisse auctor nisi ut augue efficitur, eu elementum ex dictum. 
+              Vivamus ornare quam libero, ac rhoncus est egestas tincidunt. 
+              Mauris condimentum euismod leo, sagittis aliquet sem. 
+              Donec non erat ut sapien luctus sagittis quis id urna. Sed tincidunt vulputate turpis at mattis. 
+              Proin ultrices, lorem ac rutrum fringilla, erat tortor auctor libero, 
+              sit amet blandit nulla arcu a enim. Aliquam sit amet molestie nisl, at consequat nunc. 
+              Curabitur eu mauris nunc. Sed ut iaculis sapien. 
+              Cras aliquet augue sit amet leo elementum finibus id non ligula. 
+              Fusce vel odio mattis, varius urna vitae, dictum lorem.
+            </p>
+          </div>
+        </div>
+      </article>
+
+      <article>
+        <div class="row">
+          <div class="col">
+            <h2>Galeria</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <img src="images/img_0.jpg" id="gallery-img" class="img-fluid rounded">
+          </div>
+        </div>
+      </article>
+    </div>
 
 
 
