--- a/Lab_3/Obsługa_zdarzeń/index.html
+++ b/Lab_3/Obsługa_zdarzeń/index.html
@@ -10,15 +10,70 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/styles/style.css">
 
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/app.js" defer></script>
 
 
 </head>
 
 <body>
-    <h1>185IC_B2 Łapiński Obsługa zdarzeń</h1>
-    Proszę sprawdzić konsolę.
+    <header class="text-center m-5">
+        <h1>185IC_B2 Łapiński Obsługa zdarzeń</h1>
+    </header>
+    <div class="container text-center">
+        <div class="row m-3">
+            <div class="col-sm">
+                <h2>Wygoogluj sobie coś 🕵</h2>
+                <textarea class="form-control-lg" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <button type="button" class="btn btn-primary">Szukaj 🔎</button>
+            </div>
+            <div class="col-sm">
+                <h2>Podrap mnie! 😺</h2>
+                <img src="assets/images/cat.png" class="img-fluid" alt="kotek">
+            </div>
+        </div>
+        <div class="row m-3">
+            <div class="col-sm">
+                <h2>Jaki fastfood najlepszy? 🧐</h2>
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Hamburger 🍔</option>
+                    <option value="1">Frytki 🍟</option>
+                    <option value="2">Nuggetsy 🍗</option>
+                    <option value="3">Pizza 🍕</option>
+                    <option value="4">Hot dog 🌭</option>
+                    <option value="5">Kebab 🌯</option>
+                </select>
+            </div>
+            <div class="col-sm">
+                <h2>Pepsi czy cola? 🥤</h2>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="pepsiRadioButton">
+                    <label class="form-check-label" for="pepsiRadioButton">
+                        Pepsi
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="colaRadioButton">
+                    <label class="form-check-label" for="colaRadioButton">
+                        Cola
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="row m-3">
+            <div class="col-sm">
+                <h2>Spróbuj użyć strzałek na swojej klawiaturze ⌨</h2>
+                <span>
+                    ⬆<br>
+                    ⬅⬇➡
+                </span>
+            </div>
+        </div>
+
+
+
+    </div>
 
 
 
